Fixed Navigation Bar Spacing

--- a/src/components/nav-bar/nav-bar.styles.scss
+++ b/src/components/nav-bar/nav-bar.styles.scss
@@ -4,7 +4,7 @@
 
   .nav-container {
     display: flex;
-    max-width: 1600px;
+    max-width: 1400px;
     justify-content: space-between;
     margin: auto;
 
@@ -40,7 +40,7 @@
 
     .nav-right {
       display: flex;
-      margin-left: 20rem;
+      margin-left: 10rem;
 
       .flags {
         display: flex;
